add package vlc

--- a/index.html
+++ b/index.html
@@ -2412,6 +2412,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://hci.iwr.uni-heidelberg.de/vigra">vigra</a></td>
     </tr>
     <tr>
+        <td class="package">vlc</td>
+        <td class="website"><a href="http://www.videolan.org/vlc/">VMime</a></td>
+    </tr>
+    <tr>
         <td class="package">vmime</td>
         <td class="website"><a href="http://www.vmime.org/">VMime</a></td>
     </tr>
