Add package libjpeg-turbo

--- a/index.html
+++ b/index.html
@@ -1678,6 +1678,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://sourceforge.net/projects/libircclient/">libircclient</a></td>
     </tr>
     <tr>
+        <td class="package">libjpeg-turbo</td>
+        <td class="website"><a href="http://libjpeg-turbo.virtualgl.org/">libjpeg-turbo</a></td>
+    </tr>
+    <tr>
         <td class="package">liblaxjson</td>
         <td class="website"><a href="https://github.com/andrewrk/liblaxjson">liblaxjson</a></td>
     </tr>
