Add package libfcgi

--- a/index.html
+++ b/index.html
@@ -1598,6 +1598,10 @@ local-pkg-list: $(LOCAL_PKG_LIST)</pre>
         <td class="website"><a href="http://www.netlib.org/f2c/">libf2c</a></td>
     </tr>
     <tr>
+        <td class="package">libfcgi</td>
+        <td class="website"><a href="http://www.fastcgi.com/drupal/">libfcgi</a></td>
+    </tr>
+    <tr>
         <td class="package">libffi</td>
         <td class="website"><a href="https://sourceware.org/libffi/">libffi</a></td>
     </tr>
